DoAn/Jenkins/demo-app/Kustomize/base/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: app
        image: tuan1102003/demo-app
        ports:
        - containerPort: 80
