DoAn/Jenkins/demo-app/Kustomize/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: demo-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
